fix aspect-ratio breaking out of container

--- a/assets/css/mai-publisher.css
+++ b/assets/css/mai-publisher.css
@@ -22,6 +22,7 @@
 
 /* This div gets destroyed when the gam ad unit renders, but for now at least it will set the aspect-ratio on page load */
 .mai-ad-unit-inner {
+	max-width: 100%; /* aspect-ratio was breaking out of container */
 	aspect-ratio: var(--mai-ad-unit-aspect-ratio);
 }
 
